--- a/stock_new.ipynb
+++ b/stock_new.ipynb
@@ -74,7 +74,7 @@
     "import seaborn as sns\n",
     "\n",
     "# Load and preprocess dataset\n",
-    "data = pd.read_csv('archive-2/all_stocks_5yr.csv')\n",
+    "data = pd.read_csv('data/all_stocks_5yr.csv')\n",
     "data['price_change'] = data['close'].pct_change() * 100\n",
     "data['date'] = pd.to_datetime(data['date'])\n",
     "\n",
